# legit

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt
.ruff_cache/0.12.2/: 205636638164266670
legit/: __main__.py  author.py  bases.py  blob.py  cli.py  cmd_add.py  cmd_base.py  cmd_branch.py  cmd_checkout.py  cmd_cherry_pick.py  cmd_color.py  cmd_commit.py  cmd_config.py  cmd_diff.py  cmd_fetch.py  cmd_init.py  cmd_log.py  cmd_merge.py  cmd_push.py  cmd_receive_pack.py  cmd_remote.py  cmd_reset.py  cmd_revert.py  cmd_rm.py  cmd_status.py  cmd_upload_pack.py  combined.py  command.py  commit.py  common_ancestors.py  config.py  config_stack.py  database.py  db_backends.py  db_entry.py  db_loose.py  db_packed.py  diff.py  diff3.py  diff3_script.py  (+52 more)
legit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: cmd_helpers.py  conftest.py  pack_delta_test.py  remote_repo.py  test_add.py  test_ancestors.py  test_branch.py  test_checkout.py  test_cherry_pick.py  test_cmd_add.py  test_cmd_branch.py  test_cmd_checkout.py  test_cmd_cherry_pick.py  test_cmd_commit.py  test_cmd_config.py  test_cmd_diff.py  test_cmd_fetch.py  test_cmd_log.py  test_cmd_merge.py  test_cmd_push.py  test_cmd_remote.py  test_cmd_reset.py  test_cmd_revert.py  test_cmd_rm.py  test_cmd_status.py  test_commit.py  test_config.py  test_diff.py  test_diff3.py  test_fetch.py  test_index.py  test_log.py  test_merge.py  test_pack_delta.py  test_pack_xdelta.py  test_remote.py  test_reset.py  test_revert.py  test_revision.py  test_rm.py  (+2 more)
