[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "legit"
version = "0.1.0"
description = "A small git(1) implementation."
readme = "README.md"
authors = [{ name = "xqb64", email = "x@xqb.ch" }]
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Version Control",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["legit*"]

[project.scripts]
legit = "legit.__main__:main"

